Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-641

Unable to build SVN HEAD on Fedora 7

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.1.0
    • 1.1.0
    • util
    • None
    • Fedora 7 (Linux), gcc-4.1.2-12, glibc-headers-2.6-3

    Description

      Ran into a compilation error after checking out SVN HEAD.

      Configure command used:
      ./configure --prefix=/usr/local/dev/axis2-svn

      Make command:
      make all

      Make output:
      ...
      [snipped successful compilations]
      make[5]: Entering directory `/home/shaun/src/axis2c-src-svn/util/src'
      /bin/sh ../libtool --tag=CC --mode=compile gcc -DHAVE_CONFIG_H -I. -I.. -I../include -g -O2 -D_LARGEFILE64_SOURCE -ansi -Wall -Wno-implicit-function-declaration -Werror -MT log.lo -MD -MP -MF .deps/log.Tpo -c -o log.lo log.c
      gcc -DHAVE_CONFIG_H -I. -I.. -I../include -g -O2 -D_LARGEFILE64_SOURCE -ansi -Wall -Wno-implicit-function-declaration -Werror -MT log.lo -MD -MP -MF .deps/log.Tpo -c log.c -fPIC -DPIC -o .libs/log.o
      log.c: In function 'axutil_log_create':
      log.c:130: error: 'F_OK' undeclared (first use in this function)
      log.c:130: error: (Each undeclared identifier is reported only once
      log.c:130: error: for each function it appears in.)
      make[5]: *** [log.lo] Error 1
      make[5]: Leaving directory `/home/shaun/src/axis2c-src-svn/util/src'

      This appears to be caused by a change to util/include/platforms/unix/axutil_unix.h in revision 544112.
      Two references to unistd.h were commented out, and uncommenting one of these fixes the problem.

      Also, defining the preprocessor symbol _BSD_SOURCE fixes this problem since fcntl.h (included as well) will define F_OK if _BSD_SOURCE is defined.

      Attachments

        1. axutil_unix.h.patch
          0.4 kB
          Shaun Mangelsdorf

        Activity

          People

            samisa Don Samisa Abeysinghe
            shiny Shaun Mangelsdorf
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: