Fixing the break on Fedora 7. AXIS2C-641. Applied patch from Shaun Mangelsdorf.